# forensic-analysis-system

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements-dev.txt  transcript_tail.jsonl
ansible/: inventory.yml  setup.yml  windows_wsl2_setup.md
backend/: __init__.py  api.py  config.py  pipeline.py
backend/llm_agent/: __init__.py  agent.py  case_correlator.py  evaluator.py  multi_agent.py  ollama_client.py  prompts.py  rag_handler.py
backend/models/: __init__.py  artifact.py  llm_response.py  timeline.py
backend/modules/: __init__.py  ai_preprocessor.py  anomaly_detector.py  antiforensics_checker.py  dissect_parser.py  evidence_tracker.py  log_parser.py  mitre_mapper.py  normalizer.py  pdf_generator.py  provenance_enricher.py  sleuthkit_analyzer.py  system_profiler.py  threat_intel.py  uac_handler.py
backend/utils/: __init__.py  file_detector.py  logger.py  validators.py
data/cases/: 2bc83566-9b7.json  3bdce47b-24e.json  47d10524-9d5.json  53803c61-808.json  e3a17492-afd.json  f7bc2e6c-2e5.json
data/samples/: SAMPLES_README.md  sample_combined_timeline.txt  sample_memory_dump.dmp  sample_windows_events.txt
dataflow-visualizer/: index.html  package.json  tailwind.config.js
dataflow-visualizer/src/: App.jsx  index.css
docker/: Dockerfile.backend  Dockerfile.frontend  docker-compose.yml  nginx.conf
frontend/: index.html  package.json  tailwind.config.js  vite.config.js
frontend/src/: App.jsx  index.css
rag/knowledge_base/: iocs.json  (+2 more)
scripts/: generate_sample.py  run_dev.sh  run_tests.sh  setup_ollama.sh
(+46 files in other folders)
